external-crates/move/crates/move-compiler/tests/move_2024/suggestions/suggestion_5.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W09001]: unused alias
  ┌─ tests/move_2024/suggestions/suggestion_5.move:6:17
  │
6 │     use a::n as n;
  │                 ^ Unused 'use' of alias 'n'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/suggestions/suggestion_5.move:8:25
  │
6 │     use a::n as n;
  │                 - Similarly named defintion found here
7 │     // Should suggest 'n' instead of 'N'
8 │     public fun call() { N::goof() }
  │                         ^
  │                         │
  │                         Could not resolve the name 'N'
  │                         Did you mean: 'n'
